--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "37f8270" %}
+{% set version = "f5d93f5" %}
 
 package:
   name: theia
@@ -25,8 +25,10 @@ requirements:
     - eigen
     - gflags
     - glog
-    - ceres-solver
-    - suitesparse
+    - suitesparse 5.7.2
+    - flann 1.9.1
+    - tbb
+    - ceres-solver 1.14.0
     - jpeg 9b
     - openjpeg 2.1.0
     - libpng 1.6.37
@@ -37,8 +39,10 @@ requirements:
     - eigen
     - gflags
     - glog
-    - ceres-solver
-    - suitesparse
+    - suitesparse 5.7.2
+    - flann 1.9.1
+    - tbb
+    - ceres-solver 1.14.0
     - jpeg 9b
     - openjpeg 2.1.0
     - libpng 1.6.37
