--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,8 +23,8 @@ requirements:
   host:
     - boost 1.68.0
     - eigen 3.3.7
-    - gflags
-    - glog
+    - gflags 2.2.2
+    - glog   0.4.0
     - suitesparse 5.10.1
 # Must use the ceres conda package which depends on Eigen 3.3.7
     - ceres-solver=1.14.0=h0948850_10 # [linux]
@@ -40,8 +40,8 @@ requirements:
   run:
     - boost 1.68.0
     - eigen 3.3.7
-    - gflags
-    - glog
+    - gflags 2.2.2
+    - glog   0.4.0
     - suitesparse 5.10.1
     - flann 1.9.1
     - tbb 2020.2
